--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,20 @@
 * body .container__desktop {
   width: 20rem;
   height: 4.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding: 20px;
+  word-wrap: break-word;
+  word-break: break-all;
   margin: 1rem auto;
   background-color: #182034;
   border-radius: 5px;
+  color: #fff;
+}
+* body .container__desktop .previous_number {
+  font-size: 12px;
 }
 * body .container__buttonbox {
   width: 20rem;
