--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,9 +18,21 @@
             &__desktop {
                 width: 20rem;
                 height: 4.8rem;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                justify-content: space-between;
+                padding: 20px;
+                word-wrap: break-word;
+                word-break: break-all;
                 margin: 1rem auto;
                 background-color:  hsl(224, 36%, 15%); 
-                border-radius: 5px;             
+                border-radius: 5px;
+                color: #fff;
+                
+                .previous_number {
+                    font-size: 12px;
+                }
             }
 
             &__buttonbox {
