--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,12 +8,27 @@
         height: 100vh;
         background-color: hsl(222, 26%, 31%);
         display: flex;
-        align-items: center;
         justify-content: center;
+
+        .heading {
+            position: relative;
+            color: rgb(199, 199, 199);
+            font-size: 20px;
+            margin: 10px;
+            padding: 10px;
+
+            .logo {
+                position: absolute;
+                top: 5rem;
+                left: 4rem;               
+            }
+        }
         
         .container {
             width: 20rem;
             height: 30rem;
+            align-self: center;
+            
 
             .desktop {
                 width: 20rem;
@@ -60,8 +75,14 @@
                     border-radius: 3px;
                     font-family: 'Spartan', sans-serif;
                     font-size: 16px;
-                    color: hsl(221, 14%, 31%);                 
+                    color: hsl(221, 14%, 31%);   
                 }
+
+                .button:hover {
+                    background-color: hsl(0, 0%, 80%);
+                }
+
+
 
                 .btn-reset,
                 .btn-result{
@@ -81,6 +102,12 @@
                     text-transform: uppercase;
                     font-size: 10px;    
                 }
+
+                .btn-reset:hover,
+                .btn-del:hover {
+                    background-color: hsl(224, 28%, 35%);
+                    box-shadow: inset 0px -3px 1px 1px hsl(223, 30%, 26%);
+                }
                 
                 .btn-reset,
                 .btn-result,
@@ -94,6 +121,11 @@
                    background-color: hsl(6, 63%, 50%);
                    box-shadow: inset 0px -3px 1px 1px hsl(6, 70%, 34%);
                 }
+
+                .btn-result:hover {
+                    background-color:hsl(6, 70%, 34%);
+                    box-shadow: inset 0px -3px 1px 1px hsl(6, 77%, 23%);
+                 }
             }
         }
     }
